updating/canary/manifests/vs_android.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
  namespace: canary
spec:
  hosts:
    - "*"
  gateways:
    - bgc-gateway
  http:
    - match:
        - headers:
            user-agent:
              regex: .*Chrome.*
          uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-yellow
          weight: 100
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-green
          weight: 100
